Adiciona novo projeto WPF e atualiza interface
Este commit inclui a adição do projeto `StarCut_WPF`, que contém a nova interface do usuário com os controles `AgendaView` e `EstabelecimentoView`. Os botões "Agenda" e "Estabelecimento" no `MainWindow.xaml` agora possuem eventos de clique que chamam métodos específicos. O arquivo `StarCut.csproj` foi removido e substituído por `StarCut_WPF.csproj`, que contém as configurações do novo projeto.

Além disso, novos arquivos de imagem foram adicionados para melhorar a estética da interface, e a lógica para o formulário de login foi implementada com a adição de classes como `LoginForm` e `MainForm`. Recursos de imagem também foram atualizados para incluir o logo da aplicação.

--- a/StarCut/StarCut_WPF.csproj
+++ b/StarCut/StarCut_WPF.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Images\account_box.png" />
     <None Remove="Resources\Images\App_Icon.png" />
     <None Remove="Resources\Images\StarCut_Logo.ico" />
     <None Remove="Resources\Images\StarCut_Logo.png" />
@@ -25,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Resources\Images\account_box.png" />
     <Resource Include="Resources\Images\App_Icon.png" />
     <Resource Include="Resources\Images\StarCut_Logo.ico" />
     <Resource Include="Resources\Images\StarCut_Logo.png" />
